--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-486-new-event
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand"><img src="images/logo.png" alt="Logo" /></a>
+                <a href="#" class="navbar-brand"><img src="./images/logo.png" alt="Logo" /></a>
             </div>
 
             <div class="collapse navbar-collapse">
@@ -134,7 +134,7 @@ about SECTION
                 </div>
 
                 <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.9s">
-                    <img src="images/IMG_5484.jpg" class="img-responsive" alt="about">
+                    <img src="./images/IMG_5484.jpg" class="img-responsive" alt="about">
                 </div>
 
             </div>
@@ -216,7 +216,7 @@ SPEAKERS SECTION
                     <h1>Project Chair</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
-                            <img src="images/Thipuni Wijesinghe.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Thipuni Wijesinghe.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Thipuni</h3>
                         </div>
@@ -227,26 +227,26 @@ SPEAKERS SECTION
                     <h1>Program Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
-                            <img src="images/Asiri Weerasinghe.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Asiri Weerasinghe.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Asiri Weerasinghe</h3>
                             <p>Lead</p>
                         </div>
 
                         <div class="imgDiv">
-                            <img src="images/Thilini Priyangika.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Thilini Priyangika.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Thilini Priyangika</h3>
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Ashen Vimukthi.jpeg" alt="images/speakers-img2.jpg" class="img-responsive">
+                            <img src="./images/Ashen Vimukthi.jpeg" alt="images/speakers-img2.jpg" class="img-responsive">
                             <h3>Ashen Vimukthi</h3>
                             <p>Lead</p>
                         </div>
 
                         <div class="imgDiv">
-                            <img src="images/Gihan Lahiru.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
+                            <img src="./images/Gihan Lahiru.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
                             <h3>Gihan Lahiru</h3>
                             <p>Member</p>
                         </div>
@@ -257,19 +257,19 @@ SPEAKERS SECTION
                     <h1>Web Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
-                            <img src="images/Indrakumar Powsihan.png" alt="images/speakers-img2.jpg"
+                            <img src="./images/Indrakumar Powsihan.png" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Indrakumar Powsihan</h3>
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Maduja Abhayasundara.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Maduja Abhayasundara.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Maduja Abhayasundara</h3>
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Sajan Gunasekara.png" alt="images/speakers-img2.jpg"
+                            <img src="./images/Sajan Gunasekara.png" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Sajan Gunasekara</h3>
                             <p>Member</p>
@@ -281,24 +281,24 @@ SPEAKERS SECTION
                     <h1>Finance Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
-                            <img src="images/Malka Sandaruwan.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Malka Sandaruwan.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Malka Sandaruwan</h3>
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Shachini Thakshila.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Shachini Thakshila.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Shachini Thakshila</h3>
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Raees Ahamed.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
+                            <img src="./images/Raees Ahamed.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
                             <h3>Raees Ahamed</h3>
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Dilhan Rasanjana.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Dilhan Rasanjana.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Dilhan Rasanjana</h3>
                             <p>Member</p>
@@ -310,20 +310,20 @@ SPEAKERS SECTION
                     <h1>Design Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
-                            <img src="images/Mohamed Nisfan.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
+                            <img src="./images/Mohamed Nisfan.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
                             <h3>Mohamed Nisfan</h3>
                             <p>Lead</p>
                         </div>
 
                         <div class="imgDiv">
-                            <img src="images/Nilakshan Raveendran.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Nilakshan Raveendran.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Nilakshan Raveendran</h3>
                             <p>Member</p>
                         </div>
 
                         <div class="imgDiv">
-                            <img src="images/Sachinthaka Ravimal.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Sachinthaka Ravimal.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Sachinthaka Ravimal</h3>
                             <p>Member</p>
@@ -335,24 +335,24 @@ SPEAKERS SECTION
                     <h1>Logistics Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
-                            <img src="images/Kavindu Buddhika.jpeg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Kavindu Buddhika.jpeg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Kavindu Buddhika</h3>
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Akash Vidanage.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
+                            <img src="./images/Akash Vidanage.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
                             <h3>Akash Vidanage</h3>
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Malaka_Chathuranga.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Malaka_Chathuranga.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Malaka_Chathuranga</h3>
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Tharindu Devinda.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Tharindu Devinda.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Tharindu Devinda</h3>
                             <p>Member</p>
@@ -364,28 +364,28 @@ SPEAKERS SECTION
                     <h1>Secretary Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
-                            <img src="images/Hashini Sulakshana.jpg" alt="Hashini Sulakshana" class="img-responsive">
+                            <img src="./images/Hashini Sulakshana.jpg" alt="Hashini Sulakshana" class="img-responsive">
                             <h3>Hashini Sulakshana</h3>
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Sobiya Puvanendrarajah .jpeg" alt="Sobiya Puvanendrarajah"
+                            <img src="./images/Sobiya Puvanendrarajah .jpeg" alt="Sobiya Puvanendrarajah"
                                 class="img-responsive">
                             <h3>Sobiya Puvanendrarajah</h3>
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Chamandi Sanjula.jpg" alt="Chamandi Sanjula" class="img-responsive">
+                            <img src="./images/Chamandi Sanjula.jpg" alt="Chamandi Sanjula" class="img-responsive">
                             <h3>Chamandi Sanjula</h3>
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Ahinsa Arunodi .jpg" alt="Ahinsa Arunodi" class="img-responsive">
+                            <img src="./images/Ahinsa Arunodi .jpg" alt="Ahinsa Arunodi" class="img-responsive">
                             <h3>Ahinsa Arunodi</h3>
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="images/Tashiya Tishani.jpg" alt="Tashiya Tishani" class="img-responsive">
+                            <img src="./images/Tashiya Tishani.jpg" alt="Tashiya Tishani" class="img-responsive">
                             <h3>Tashiya Tishani</h3>
                             <p>Member</p>
                         </div>
@@ -541,7 +541,7 @@ VENUE SECTION
 
                 <div class="wow  col-md-offset-1 col-md-5 col-sm-8" data-wow-delay="0.9s">
                     <h2 id="galleryHead">Gallery</h2>
-                    <div id="galleryIntroImg"><img src="images/IMG_4473.JPG" alt="galleryIntroImg"></div>
+                    <div id="galleryIntroImg"><img src="./images/IMG_4473.JPG" alt="galleryIntroImg"></div>
                     <p>You can see our Previous Openday 2023 Photos</p>
                     <button type="button" class="btn btn-primary"><a href="gallery.html"> View gallery</a></button>
 
@@ -637,9 +637,9 @@ FOOTER SECTION
             <div class="row">
 
                 <div class="col-md-12 col-sm-12">
-                    <img src="images/logo.png" alt="" width="100" />
+                    <img src="./images/logo.png" alt="" width="100" />
                     <h2>Presented By</h2>
-                    <img src="images/ieee_logo.png" alt="" width="200" />
+                    <img src="./images/ieee_logo.png" alt="" width="200" />
                     <h2 style="padding-top: 20px;">Contact Us</h2>
                     <p><a href="#">ieeesbuwu@gmail.com</a></p>
 
