--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
                     alt="galleryImg"></div>
             <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4467.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4470.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4470.JPG"
                     alt="galleryImg"></div>
             <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4468.jpg"
                     alt="galleryImg"></div>
