changes in images

--- a/gallery.html
+++ b/gallery.html
@@ -71,55 +71,55 @@
                     alt="galleryImg"></div>
             <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4470.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4468.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4468.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4474.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4474.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4471.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4471.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4476.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4476.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4475.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4475.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4481.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4481.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4483.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4483.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4485.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4485.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4478.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4478.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4469.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4469.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4472.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4472.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4484.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4484.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4486.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4486.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5473.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5473.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5472.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5472.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5483.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5483.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5474.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5474.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5475.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5475.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5477.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5477.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5478.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5478.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5476.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5476.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5480.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5480.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5482.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5482.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5481.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5481.JPG"
                     alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5479.jpg"
+            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5479.JPG"
                     alt="galleryImg"></div>
 
         </div>
