--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ about SECTION
                 </div>
 
                 <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.9s">
-                    <img src="./images/IMG_5484.jpg" class="img-responsive" alt="about">
+                    <img src="./images/IMG_5484.JPG" class="img-responsive" alt="about">
                 </div>
 
             </div>
@@ -263,7 +263,7 @@ SPEAKERS SECTION
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="./images/Maduja Abhayasundara.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Maduja Abhayasundara.JPG" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Maduja Abhayasundara</h3>
                             <p>Member</p>
@@ -316,7 +316,7 @@ SPEAKERS SECTION
                         </div>
 
                         <div class="imgDiv">
-                            <img src="./images/Nilakshan Raveendran.jpg" alt="images/speakers-img2.jpg"
+                            <img src="./images/Nilakshan Raveendran.JPG" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Nilakshan Raveendran</h3>
                             <p>Member</p>
